--- a/app/src/main/res/layout/baking_widget.xml
+++ b/app/src/main/res/layout/baking_widget.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@android:color/white">
 
     <LinearLayout
         android:id="@+id/widget_toolbar"
@@ -20,6 +21,17 @@
             android:text="@string/app_name"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView_widget_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="@string/add_widget_hint"
+        android:textColor="@color/primary_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textStyle="bold"
+        android:visibility="gone"/>
 
     <ListView
         android:id="@+id/baking_widget_listView"
