--- a/app/src/main/res/layout/list_item_baking_widget.xml
+++ b/app/src/main/res/layout/list_item_baking_widget.xml
@@ -5,15 +5,25 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:background="@drawable/selector"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingEnd="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingStart="16dp">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView_recipe"
-        style="@style/ListTextStyle_Phone"
-        tools:text="Recipe Name" />
+        <TextView
+            android:id="@+id/textView_quantity"
+            style="@style/ListTextStyle_Phone"
+            android:textColor="@android:color/black"
+            tools:text="5" />
+
+        <TextView
+            android:id="@+id/textView_measure"
+            style="@style/ListTextStyle_Phone"
+            android:textColor="@android:color/black"
+            tools:text="kilo" />
+
+
+        <TextView
+            android:id="@+id/textView_ingredient"
+            style="@style/ListTextStyle_Phone"
+            android:textColor="@android:color/black"
+            tools:text="ingredient" />
 
 </LinearLayout>
