--- a/app/src/main/res/layout/list_item_ingredient.xml
+++ b/app/src/main/res/layout/list_item_ingredient.xml
@@ -12,9 +12,10 @@
         android:layout_height="match_parent"
         card_view:elevation="3dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView_quantity"
@@ -37,7 +38,7 @@
                 style="@style/ListTextStyle_Phone"
                 tools:text="ingredient" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
